# evaluator

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  age.go  build.rs  challenge.go  composer.json  evaluator.go  evaluator_test.go  exercise.go  gender.go  go.mod  go.sum  phpunit.xml  result.go  score.go  table.go  table_test.go  tables.go  tables_generate.go  unit.go  xlsx.php
.github/workflows/: publish-cdn.yml  publish-npm.yml  publish.yml
cmd/tables_generate/: main.go
data/: aerob-bike-12min-fiúk.csv  aerob-bike-12min-lányok.csv  aerob-run-12min-fiúk.csv  aerob-run-12min-lányok.csv  aerob-run-12min.xlsx  aerob-run-1mile-fiúk.csv  aerob-run-1mile-lányok.csv  aerob-run-1mile.xlsx  aerob-run-1mile5-fiúk.csv  aerob-run-1mile5-lányok.csv  aerob-run-1mile5.xlsx  aerob-run-2km-fiúk.csv  aerob-run-2km-lányok.csv  aerob-run-2km.xlsx  aerob-run-2mile-fiúk.csv  aerob-run-2mile-lányok.csv  aerob-run-2mile.xlsx  aerob-run-3km-fiúk.csv  aerob-run-3km-lányok.csv  aerob-run-3km.xlsx  aerob-run-6min-lányok.csv  aerob-run-6min.xlsx  aerob-swim-12min-fiúk.csv  aerob-swim-12min-lányok.csv  aerob-swim-12min.xlsx  aerob-swim-500m-lányok.csv  aerob-swim-500m.xlsx  motor4-jump-fiúk.csv  motor4-jump-lányok.csv  motor4-jump.xlsx  motor4-pushup-fiúk.csv  motor4-pushup-lányok.csv  motor4-pushup.xlsx  motor4-situp-fiúk.csv  motor4-situp-lányok.csv  motor4-situp.xlsx  motor4-torso-fiúk.csv  motor4-torso-lányok.csv  motor4-torso.xlsx  motor6-jump-fiúk.csv  (+15 more)
dev/: api-new.js  api.js  index.js  web.js  xlsx2csv.py
dev/web/: index.html
docs/: README-NPM-BROWSER.md  README-NPM.md
examples/: usage.rs
src/: challenge.rs  classification.rs  evaluation_results.rs  evaluator.rs  exercise.rs  format_decode.rs  format_encode.rs  gender.rs  lib.rs  loader.rs  lookup.rs  lookup_test.rs  main.rs  tables.rs  wasm.rs
src/Hungarofit/Evaluator/: Challenge.php  ChallengeInterface.php  Enum.php  EnumException.php  Exercise.php  ExerciseInterface.php  Gender.php  LimitAwareInterface.php  Lookup.php  NameAwareInterface.php  Rating.php  Result.php  ResultInterface.php  ResultSet.php  ResultSetInterface.php  Text.php  Unit.php  UnitAwareInterface.php
src/Hungarofit/Evaluator/Challenge/: Hungarofit3.php  Hungarofit4.php  Hungarofit6.php
src/Hungarofit/Evaluator/Exercise/: AerobBike12min.php  AerobRun12min.php  AerobRun1mile.php  AerobRun1mile5.php  AerobRun2km.php  AerobRun2mile.php  AerobRun3km.php  AerobRun6min.php  AerobSwim12min.php  AerobSwim500m.php  Motor3Jump.php  Motor3Situp.php  Motor3Torso.php  Motor4Jump.php  Motor4Pushup.php  Motor4Situp.php  Motor4Torso.php  Motor6Jump.php  Motor6Pushup.php  Motor6Situp.php  Motor6Throwdouble.php  Motor6Throwsingle.php  Motor6Torso.php
src/Hungarofit/Evaluator/Lookup/: AerobBike12min.php  AerobRun12min.php  AerobRun1mile.php  AerobRun1mile5.php  (+19 more)
test/: bootstrap.php
test/fixture/: HungarofitEvaluatorTestCase.php
test/unit/: ChallengeTest.php  EnumTest.php  ExerciseTest.php  LookupTest.php  TextTest.php
tpl/: table.go.tpl
xlsx/: aerob-bike-12min.xlsx  aerob-run-12min.xlsx  aerob-run-1mile.xlsx  aerob-run-1mile5.xlsx  aerob-run-2km.xlsx  aerob-run-2mile.xlsx  aerob-run-3km.xlsx  aerob-run-6min.xlsx  aerob-swim-12min.xlsx  aerob-swim-500m.xlsx  motor-3-jump.xlsx  motor-3-situp.xlsx  motor-3-torso.xlsx  motor-4-jump.xlsx  motor-4-pushup.xlsx  motor-4-situp.xlsx  motor-4-torso.xlsx  motor-6-jump.xlsx  motor-6-pushup.xlsx  motor-6-situp.xlsx  motor-6-throwdouble.xlsx  motor-6-throwsingle.xlsx  motor-6-torso.xlsx  motor4-jump.xlsx  motor4-pushup.xlsx  motor4-situp.xlsx  motor4-torso.xlsx  motor6-jump.xlsx  motor6-situp.xlsx  motor6-throwdouble.xlsx  motor6-torso.xlsx
(+1 files in other folders)
