[package]
name = "evaluator"
version = "0.0.1"
edition = "2021"
authors = ["Lajos Bencz"]
description = "Hungarofit - Library for evaluating physical performance"
license = "LGPL-3.0-or-later"
repository = "https://github.com/hungarofit/evaluator"
homepage = "https://hungarofit.hu"
keywords = ["health", "fitness", "evaluator", "hungarofit", "exercise", "sport"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
# cydlib is for the WASM target; rlib is for standard Rust use
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lookup"
path = "src/bin/lookup.rs"
required-features = ["binary"]

[features]
binary = ["dep:clap"]

[dependencies]
half = "2.7.1"
wasm-bindgen = "0.2"
once_cell = "1.19"
lz4 = "1.28.1"
clap = { version = "4.5", features = ["derive"], optional = true }

[build-dependencies]
calamine = "0.32"
half = "2.7.1"
anyhow = "1.0"
lz4 = "1.28.1"

[profile.dev.build-override]
debug = true

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable link-time optimization
codegen-units = 1    # Maximize optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller panic handler
